--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -22,9 +22,19 @@ const { class: className } = Astro.props;
     class="flex space-x-4 justify-between items-center md:items-center md:space-x-0 md:max-w-8xl"
   >
     <div class="font-bold flex flex-row items-center">
-      <a href="/" class="px-4">
-        <Button client:load className="" variant="default">
+      <a href="/" class="px-4 hidden md:flex no-underline">
+        <Button
+          client:load
+          className="flex gap-2 hover:no-underline text-2xl"
+          variant="link"
+        >
+          <img src="/logo.svg" alt="Logo" class="w-[2rem] h-[2rem]" />
           {SITE.title}
+        </Button>
+      </a>
+      <a href="/" class="px-4 flex md:hidden">
+        <Button client:load className="" variant="ghost" size="icon">
+          <img src="/logo.svg" alt="Logo" class="w-[2rem] h-[2rem]" />
         </Button>
       </a>
       <div class="hidden md:block">
@@ -32,7 +42,7 @@ const { class: className } = Astro.props;
       </div>
     </div>
 
-    <div class="flex flex-row gap-4">
+    <div class="flex flex-row gap-4 md:px-8">
       <Search client:only="react" />
       <div class="md:hidden flex flex-row-reverse gap-4">
         <HamNavMenu />
