--- a/src/components/docs/MainContent.astro
+++ b/src/components/docs/MainContent.astro
@@ -20,19 +20,21 @@ const {
 } = Astro.props as MainContentProps;
 ---
 
-{!docconfig.hide_breadcrumbs && <Breadcrumbs class="" />}
-<h1 class="pb-2">{capitalizeFirstLetter(title)}</h1>
-{
-  !docconfig.hide_datetime && pubDatetime && (
-    <Datetime
-      hide_datetime={docconfig.hide_datetime}
-      hide_time={docconfig.hide_time}
-      pubDatetime={pubDatetime}
-      modDatetime={modDatetime}
-      className="my-2"
-    />
-  )
-}
-<div class="prose pt-4">
-  <slot />
+<div class="bg-background py-4 px-6 min-h-static_sidemenu">
+  {!docconfig.hide_breadcrumbs && <Breadcrumbs class="" />}
+  <h1 class="pb-2 italic">{capitalizeFirstLetter(title)}</h1>
+  {
+    !docconfig.hide_datetime && pubDatetime && (
+      <Datetime
+        hide_datetime={docconfig.hide_datetime}
+        hide_time={docconfig.hide_time}
+        pubDatetime={pubDatetime}
+        modDatetime={modDatetime}
+        className="my-2"
+      />
+    )
+  }
+  <div class="prose pt-4">
+    <slot />
+  </div>
 </div>
