--- a/src/components/home/hero.astro
+++ b/src/components/home/hero.astro
@@ -2,19 +2,34 @@
 const { class: className } = Astro.props;
 import { Image } from "astro:assets";
 import { Button } from "@/components/ui/button";
+import KittyAstronaut from "@/assets/KittyAstronaut.svg";
 ---
 
-<div class:list={["py-6 w-full", className]}>
-  <div class="">
-    <div>
-      <h1>Make your docs shine with CelestialDocs</h1>
+<div
+  class:list={[
+    "pattern py-6 w-full md:w-3/4 md:max-w-8xl min-h-dynamic_hero flex flex-col items-center justify-center",
+    className,
+  ]}
+>
+  <div class="flex flex-col-reverse md:flex-row">
+    <div
+      class="flex flex-col gap-4 md:w-1/2 p-8 justify-center items-center md:items-start"
+    >
+      <h1
+        class="text-pretty text-center md:text-left md:text-4xl lg:text-5xl tracking-wide"
+      >
+        Elevate Your Documentation with a <i class="text-primary">Celestial</i> Touch
+      </h1>
       <a href="/getting-started" class="py-4">
-        <Button> Get started </Button>
+        <Button size="lg" className="rounded-lg">
+          <h4 class="text-lg">Get started</h4>
+        </Button>
       </a>
     </div>
-    <div class="">
-      <!-- <Image src={} /> -->
+    <div class="hidden md:flex w-1/2 justify-center align-middle">
+      <Image src={KittyAstronaut} alt="404" />
     </div>
-    <code>0123456789abcdefghijklmnopqrstuvwxyz</code>
   </div>
 </div>
+
+<style></style>
