--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -23,10 +23,8 @@ const { title, description, ogImage } = Astro.props as BaseLayoutProps;
   <body class="bg-background text-foreground font-sans">
     <div class="flex flex-col min-h-screen">
       <Header class="bg-background" />
-      <main class="flex flex-1 flex-col md:flex-row justify-center py-6">
-        <div class="md:w-3/4 md:max-w-8xl">
-          <slot />
-        </div>
+      <main class="flex flex-1 flex-col justify-center items-center px-4">
+        <slot />
       </main>
       <Footer class="border-t border-border bg-background" />
     </div>
