--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -34,7 +34,7 @@ const {
       description={description}
     />
   </head>
-  <body class="bg-background text-foreground font-sans">
+  <body class="font-sans bg-card">
     <div class="flex flex-col min-h-screen">
       <Header class="border-b bg-background" />
       <main class="flex flex-1 flex-col md:flex-row container">
@@ -49,7 +49,7 @@ const {
             }
           </ScrollArea>
         </div>
-        <div class="px-6 py-4 w-full md:w-3/4 lg:w-3/5">
+        <div class="w-full md:w-3/4 lg:w-3/5">
           <MainContent
             title={title}
             author={author}
