--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -22,6 +22,7 @@ const {
   description,
   draft,
   tags,
+  hide_breadcrumbs,
   headings,
 } = Astro.props as DocsLayoutProps;
 ---
@@ -58,6 +59,7 @@ const {
             description={description}
             draft={draft}
             tags={tags}
+            hide_breadcrumbs={hide_breadcrumbs}
             headings={headings}
           >
             <slot />
