--- a/src/pages/[...slug].astro
+++ b/src/pages/[...slug].astro
@@ -9,7 +9,7 @@ import type { Heading } from "@/lib/types";
 export const getStaticPaths = (async () => {
   const docs = await getCollection("docs", ({ data }) => !data.draft);
   const headings: MarkdownHeading[][] = await Promise.all(
-    docs.map((entry) => entry.render().then((data) => data.headings)),
+    docs.map((entry) => entry.render().then((data) => data.headings))
   );
 
   const posts = docs.map((entry, index) => {
