--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -42,7 +42,7 @@ const alertTitle = title || defaultTitles[validVariant];
 const alertClasses = variantClasses[validVariant];
 ---
 
-<div class="py-2 px-4 w-full">
+<div class="callout py-2 w-full">
   <Alert className={`flex flex-row items-start gap-2 ${alertClasses}`}>
     <Button variant="ghost" size="icon">
       <Icon className="h-[1.2rem] w-[1.2rem]" />
