--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -4,7 +4,7 @@ import Hero from "@/components/home/hero.astro";
 ---
 
 <BaseLayout
-  title="Astro Shadcn UI Documentation Template"
+  title="CelestialDocs"
   description="This template helps you build Documentation with Astro, Tailwind CSS, and Shadcn UI."
 >
   <Hero />
