--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -185,7 +185,7 @@ td {
 }
 
 .prose code:not(.astro-code code) {
-  @apply bg-popover text-popover-foreground p-1 rounded;
+  @apply bg-popover text-popover-foreground py-1 px-2 rounded;
 }
 
 .prose h1 {
