a lot of content added

--- a/src/components/core/HamNavMenu.astro
+++ b/src/components/core/HamNavMenu.astro
@@ -55,7 +55,7 @@ const pathname_part: string = pathname.split("/")[1];
         ))
       }
       {
-        !docconfig.hide_side_navinations && (
+        !docconfig.hide_side_navigations && (
           <div class="py-4 w-full">
             <Separator />
               <SideNavMenu items={menu} level={0} class="px-4 " />
