--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -50,7 +50,7 @@ const {
         >
           <ScrollArea className="h-full w-full" client:only="react">
             {
-              !docconfig.hide_side_navinations && !hide_sidenav && (
+              !docconfig.hide_side_navigations && !hide_sidenav && (
                 <SideNavMenu items={menu} level={0} />
               )
             }
