--- a/src/components/Callout.astro
+++ b/src/components/Callout.astro
@@ -6,21 +6,30 @@ import {
   Info,
   TriangleAlert,
   Skull,
+  type LucideIcon,
 } from "lucide-react";
 import { Button } from "@/components/ui/button";
 
 type Variant = "info" | "warning" | "danger" | "success";
 
-const { variant, title } = Astro.props as { variant?: Variant; title?: string };
+interface Props {
+  variant?: Variant;
+  title?: string;
+  icon?: LucideIcon; // Optional custom icon prop
+}
+
+const { variant, title, icon: CustomIcon } = Astro.props as Props;
 
 const variantClasses: Record<Variant, string> = {
-  info: "border-Blue bg-Blue text-background",
-  warning: "border-Orange bg-Orange text-background",
-  danger: "border-Red bg-Red text-background",
-  success: "border-Green bg-Green text-background",
+  info: "border-Blue bg-Blue text-background hover:bg-Blue cursor-default",
+  warning:
+    "border-Orange bg-Orange text-background hover:bg-Orange cursor-default",
+  danger: "border-Red bg-Red text-background hover:bg-Red cursor-default",
+  success:
+    "border-Green bg-Green text-background hover:bg-Green cursor-default",
 };
 
-const variantIcons: Record<Variant, any> = {
+const variantIcons: Record<Variant, LucideIcon> = {
   info: Info,
   warning: TriangleAlert,
   danger: Skull,
@@ -37,14 +46,14 @@ const defaultTitles: Record<Variant, string> = {
 // Check if the provided variant is valid; otherwise, use 'info' as the default
 const validVariant = variant && variantClasses[variant] ? variant : "info";
 
-const Icon = variantIcons[validVariant];
+const Icon = CustomIcon || variantIcons[validVariant];
 const alertTitle = title || defaultTitles[validVariant];
 const alertClasses = variantClasses[validVariant];
 ---
 
 <div class="callout py-2 w-full">
   <Alert className={`flex flex-row items-start gap-2 ${alertClasses}`}>
-    <Button variant="ghost" size="icon">
+    <Button variant="ghost" size="icon" className=`${alertClasses}`>
       <Icon className="h-[1.2rem] w-[1.2rem]" />
     </Button>
     <div>
