experimenting with custom copy button

--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -15,7 +15,7 @@ const { class: className } = Astro.props;
       class="text-center text-sm leading-loose text-muted-foreground md:text-left"
     >
       Built by <a
-        href="https://github.com/HYP3R00T"
+        href="https://hyperoot.dev"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4">HYP3R00T</a
