--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -14,6 +14,8 @@ import { menu, capitalizeFirstLetter } from "@/lib/utils";
 
 import { LOCALE, SITE, docconfig } from "config";
 
+// import { Copy } from "@/components/core/Copy";
+
 const {
   title,
   author,
@@ -41,6 +43,7 @@ const {
   <body
     class=`font-sans ${hide_toc && hide_sidenav && max_width ? "" : "bg-card"}`
   >
+    <!-- <Copy client:only="react" /> -->
     <div class="flex flex-col min-h-screen">
       <Header class="border-b bg-background" />
       <main class="flex flex-1 flex-col md:flex-row container">
