--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -106,6 +106,10 @@ blockquote {
   @apply mt-6 border-l-2 pl-6 italic border-primary;
 }
 
+pre {
+  @apply border rounded;
+}
+
 ul {
   @apply my-6 ml-6 list-disc [&>li]:mt-2;
 }
@@ -235,4 +239,15 @@ td {
 /* callout */
 .callout a {
   @apply hover:text-background;
+}
+
+/* shiki theme */
+html.dark .astro-code,
+html.dark .astro-code span {
+  color: var(--shiki-dark) !important;
+  background-color: var(--shiki-dark-bg) !important;
+  /* Optional, if you also want font styles */
+  font-style: var(--shiki-dark-font-style) !important;
+  font-weight: var(--shiki-dark-font-weight) !important;
+  text-decoration: var(--shiki-dark-text-decoration) !important;
 }
