--- a/src/components/core/BacktoTop.astro
+++ b/src/components/core/BacktoTop.astro
@@ -4,7 +4,7 @@ import { ChevronUpIcon } from "lucide-react";
 ---
 
 <div
-  class="transition-opacity duration-300 sticky bottom-8 flex justify-center py-4"
+  class="transition-opacity duration-300 sticky bottom-8 flex justify-center py-4 opacity-0"
 >
   <div onclick="scrollToTop()" id="back-to-top" class="w-fit">
     <Button variant="secondary" className="gap-2" size="icon">
