--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -1,5 +1,5 @@
 ---
-import { Socials } from "config";
+import { Socials } from "@/config";
 import { getIconByName } from "@/components/core/Icons";
 import { Button } from "@/components/ui/button";
 
