--- a/src/components/core/HamNavMenu.astro
+++ b/src/components/core/HamNavMenu.astro
@@ -9,7 +9,7 @@ import { MenuIcon, X } from "lucide-react";
 
 import { menu } from "@/lib/utils";
 
-import { menu_items, docconfig } from "config";
+import { menu_items, docconfig } from "@/config";
 
 const pathname: string = new URL(Astro.request.url).pathname;
 const pathname_part: string = pathname.split("/")[1];
