--- a/src/components/docs/MainContent.astro
+++ b/src/components/docs/MainContent.astro
@@ -6,7 +6,7 @@ import Breadcrumbs from "@/components/docs/Breadcrumbs.astro";
 import type { MainContentProps } from "@/lib/types";
 import { capitalizeFirstLetter } from "@/lib/utils";
 
-import { docconfig } from "config";
+import { docconfig } from "@/config";
 import BacktoTop from "@/components/core/BacktoTop.astro";
 
 const {
