--- a/src/layouts/BaseLayout.astro
+++ b/src/layouts/BaseLayout.astro
@@ -6,7 +6,7 @@ import Footer from "@/components/core/Footer.astro";
 import type { BaseLayoutProps } from "@/lib/types";
 import { capitalizeFirstLetter } from "@/lib/utils";
 
-import { LOCALE, SITE } from "config";
+import { LOCALE, SITE } from "@/config";
 
 const { title, description, ogImage } = Astro.props as BaseLayoutProps;
 ---
