--- a/src/layouts/DocsLayout.astro
+++ b/src/layouts/DocsLayout.astro
@@ -13,7 +13,7 @@ import { ScrollArea } from "@/components/ui/scroll-area";
 import type { DocsLayoutProps } from "@/lib/types";
 import { menu, capitalizeFirstLetter } from "@/lib/utils";
 
-import { LOCALE, SITE, docconfig } from "config";
+import { LOCALE, SITE, docconfig } from "@/config";
 
 const {
   title,
