--- a/src/components/core/Header.astro
+++ b/src/components/core/Header.astro
@@ -6,7 +6,7 @@ import { Search } from "@/components/core/Search";
 
 import { Button } from "@/components/ui/button";
 
-import { docconfig, SITE } from "config";
+import { docconfig, SITE } from "@/config";
 import { Github } from "lucide-react";
 
 // To pass the tailwindcss classes to the astro component
