--- a/src/components/core/Footer.astro
+++ b/src/components/core/Footer.astro
@@ -15,13 +15,13 @@ const { class: className } = Astro.props;
       class="text-center text-sm leading-loose text-muted-foreground md:text-left"
     >
       Built by <a
-        href="https://hyperoot.dev"
+        href="https://yian1024.pages.dev"
         target="_blank"
         rel="noreferrer"
-        class="font-medium underline underline-offset-4">HYP3R00T</a
+        class="font-medium underline underline-offset-4">YIAN1024</a
       >. The source code is available on
       <a
-        href="https://github.com/HYP3R00T/CelestialDocs"
+        href="https://github.com/yian1024/CelestialDocs"
         target="_blank"
         rel="noreferrer"
         class="font-medium underline underline-offset-4">GitHub</a
