--- a/src/components/core/HeadSEO.astro
+++ b/src/components/core/HeadSEO.astro
@@ -12,7 +12,7 @@ import type { HeadSEOProps } from "@/lib/types";
 const canonicalURL = new URL(Astro.url);
 
 if (Astro.props.ogImage === undefined) {
-  Astro.props.ogImage = new URL("og-image.jpg", canonicalURL);
+  Astro.props.ogImage = new URL("og-image.png", canonicalURL);
 }
 
 const { title, description, ogImage } = Astro.props as HeadSEOProps;
